--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "prod:http": "node ./app/app.js",
     "prod:http2": "NODE_HTTP=http2 node ./app/app.js",
-    "dev:http": "NODE_ENV=DEVELOP node ./app/app.js",
-    "dev:http2": "NODE_HTTP=http2 NODE_ENV=DEVELOP node ./app/app.js",
+    "dev:http": "NODE_ENV=DEVELOP node-dev ./app/app.js",
+    "dev:http2": "NODE_HTTP=http2 NODE_ENV=DEVELOP node-dev ./app/app.js",
     "test:http": "NODE_ENV=TEST jest",
     "test:http2": "NODE_ENV=TEST NODE_HTTP=http2 jest",
     "coverage:http": "NODE_ENV=TEST jest --coverage"
@@ -30,6 +30,7 @@
     "eslint-plugin-jest": "^21.15.0",
     "jest": "^22.2.2",
     "minimist": "^1.2.0",
+    "node-dev": "^3.1.3",
     "node-fetch": "^2.0.0"
   }
 }
