--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,22 @@ services:
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
-      - ./prod/data:/usr/share/elasticsearch/data
-      - ./prod/logs:/usr/share/elasticsearch/logs
+      - esdata:/usr/share/elasticsearch/data
+      - eslog:/usr/share/elasticsearch/logs
     ports:
       - 9200:9200
     networks:
       - esnet
-
+volumes:
+  esdata:
+    driver: local
+  eslog:
+    driver: local
 networks:
   esnet:
