--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,14 @@
 version: '3'
 services:
-  sam:
-    build: .
-    container_name: sam
+  dynamodb:
+    image: amazon/dynamodb-local
+    container_name: dynamodb-dev
     ports:
-      - "3000:3000"
-    networks: 
-      - esnet
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.2.4
-    container_name: elasticsearch
-    environment:
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - esdata:/usr/share/elasticsearch/data
-      - eslog:/usr/share/elasticsearch/logs
-    ports:
-      - 9200:9200
+      - "8000:8000"
+    command: -jar DynamoDBLocal.jar -sharedDb
     networks:
-      - esnet
-volumes:
-  esdata:
-    driver: local
-  eslog:
-    driver: local
+      - dev
+
 networks:
-  esnet:
+  dev:
+    driver: bridge
